<resources>
    <string name="app_name">MisDeudores</string>
    <string name="hola_mundo">Hola mundo</string>
    <string name="Registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="telefono">Telefono</string>
    <string name="contrasena">Contraseña</string>
    <string name="repetir_contrasena">Repetir Contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="respuesta">Nombre: %s \nCorreo: %s \nTelefono: %s \nGenero: %s \nPasatiempos: %s \nCiudad de nacimiento: %s \nDia de nacimiento: %s</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="genero">Genero</string>
    <string name="pasatiempos">Pasatiempos</string>
    <string name="gym">Gym</string>
    <string name="comer">Comer</string>
    <string name="series">Series</string>
    <string name="lugar_de_nacimiento2">Lugar de nacimiento</string>
    <string name="study">Estudiar</string>
    <string name="dia_de_nacimiento">Día de nacimiento</string>
    <string name="fecha">Fecha</string>
    <string name="registrar">Registrar</string>

    <string-array name="ciudades_nacimiento">
        <item> Seleccione una ciudad</item>
        <item> Madrid</item>
        <item> Amsterdam</item>
        <item> Sidney</item>
        <item> Bruselas</item>
        <item> Munich</item>
    </string-array>

    <string name="digite_nombre">Nombre</string>
    <string name="deuda">Valor deuda</string>
    <string name="guardar">Guardar</string>
    <string name="buscar">Buscar</string>
    <string name="valor_deuda">Valor Deuda</string>
    <string name="campo_obligatorio">Obligatory Box</string>
    <string name="crear">Crear</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="actualizar">Actualizar</string>
    <string name="borrar">Borrar</string>
    <string name="title_activity_botton">MainActivity</string>


    <string name="title_notifications">Notifications</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="borrar_button">Borrar</string>

</resources>