<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.crear.CrearFragment">

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/nombre_edit_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="@string/campo_obligatorio">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombre_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_nombre" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/telefono_edit_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/telefono_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/valor_edit_text_layoout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/valor_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deuda"
            android:inputType="numberSigned|number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/guardar_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00A675"
        android:text="@string/guardar" />
</LinearLayout>